# GenAIprep

./: .gitignore  pyproject.toml
docs/: UV_CHEATSHEET.md
langchain_agents/: .env.example  output.md  simple_agent.py
langchain_document_loader/: py_pdf_loader.py  test.txt  text_loader.py
langchain_models/document_similarity/: .env.example  main.py
langchain_models/huggingface/: .env.example  chat.py  embedding.py  local_llm.py
langchain_models/openai/: chat.py  embedding.py  llm.py
langchain_models/openrouter/: chat.py
langchain_output_parsers/: jsonoutputparser.py  pydanticoutputparser.py  stringoutputparser.py
langchain_prompts/: chain_ui.py  prompt_generator.py  tempCodeRunnerFile.py  template.json  ui.py
langchain_prompts/chatbot/: chat_history.txt  chat_prompt_template.py  main.py  message_placeholder.py  (+1 more)
langchain_runnables/: multi_chain_runnable.py  non_standard_components.py  runnable_branch.py  runnable_lambda.py  runnable_parallel.py  runnable_passthrough.py  runnable_sequence.py  standardized_components.py
langchain_tools/: .env.example  basics.py  context.py  context_toolcall.py  currency_conversion.py  enforced_schema.py  error_handling.py  refund_assistant.py  shell_tool.py  state_update_tool.py  stateful_tool.py  stateless_tool.py  store.py  streaming.py  structured_tool.py  tool_binding.py
langgraph_endtoend/: .env.example  customer_support_email_agent.py
langgraph_hello_world/: calculator_agent.py  conditional_edge.py  simple_example.py
langhcain_chains/: conditional_chains.py  parallel_chain.py  sequential_chain.py  simple_chains.py
(+5 files in other folders)
