[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.10.0",
    "huggingface-hub>=1.21.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.5",
    "numpy>=2.5.0",
    "openai>=2.44.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
